<resources>
    <string name="app_name">Batter Up Baseball</string>
    <string name="standings">Standings</string>
    <string name="seasons">Seasons</string>
    <string name="exhibition">Exhibition</string>
    <string name="store">Store</string>
    <string name="draft">Draft</string>
    <string name="new_season">New Season</string>
    <string name="continue_season">Continue Season</string>
    <string name="exhibition_away">Away</string>
    <string name="exhibition_home">Home</string>
    <string name="exhibition_visitor_teamname">Visitor Team Name</string>
    <string name="exhibition_home_teamname">Home Team Name</string>
    <string name="exhibition_batting">Batting</string>
    <string name="exhibition_pitching">Pitching</string>
    <string name="exhibition_fielding">Fielding</string>
    <string name="exhibition_game">Exhibition Game</string>
    <string name="exhibition_year">Year</string>
    <string name="team_select">Team Select</string>
    <string name="teams">Teams</string>
    <string name="default_db_name">players_2016.db</string>
    <string name="cancel">Cancel</string>
    <string name="steal">Steal</string>
    <string name="steal2ndbase">Runner On 1st</string>
    <string name="steal3rdbase">Runner On 2nd</string>
    <string name="stealhome">Runner On 3rd</string>

    <string name="throws_a_wild_pitch"> throws a wild pitch!</string>
    <string name="scores"> scores!</string>
    <string name="is_called_for_a_balk"> is called for a balk!</string>
    <string name="for_a_passed_ball"> for a passed ball!</string>
    <string name="do_not_steal">Do not Steal</string>
    <string name="pinch_runner">Pinch Runner</string>
    <string name="steal_home">Steal Home</string>
    <string name="runner_on_3rd">Runner on 3rd</string>
    <string name="steal_3rd">Steal 3rd</string>
    <string name="runner_on_2nd">Runner on 2nd</string>
    <string name="steal_2nd">Steal 2nd</string>
    <string name="runner_on_1st">Runner on 1st</string>
    <string name="batter_options">Batter Options</string>
    <string name="pinch_hitter">Pinch Hitter</string>
    <string name="sacrifice_bunt">Sacrifice Bunt</string>
    <string name="hit_and_run">Hit and Run</string>
    <string name="squeeze_play">Squeeze Play</string>
</resources>
