<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_centerVertical="true"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <android.support.v7.widget.CardView
            android:layout_marginStart="20dp"
            android:id="@+id/card_view_1"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            card_view:elevation="8dp"
            card_view:cardCornerRadius="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/tvSeasons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seasons" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginStart="20dp"
            android:background="@color/colorPrimary"
            android:id="@+id/card_view_2"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            card_view:elevation="2dp"
            card_view:cardCornerRadius="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/tvExhibition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exhibition" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/card_view_3"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            card_view:elevation="2dp"
            card_view:cardCornerRadius="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/tvDraft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/draft" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginEnd="20dp"
            android:id="@+id/card_view_4"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            card_view:elevation="2dp"
            card_view:cardCornerRadius="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/tvStore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/store"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>