<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/exhibition_game"
        android:textSize="24sp" />

    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/ivBack"
        android:src="@drawable/left_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/ivForward"
        android:src="@drawable/right_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_centerVertical="true"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/cvVisitor"
            android:layout_weight="1"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_width="200dp"
            android:layout_height="200dp">

            <LinearLayout
                android:orientation="vertical"
                android:weightSum="5"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/exhibition_visitor"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:background="#ffff0000"
                    android:id="@+id/bgVisitorTeamname"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:id="@+id/tvVisitorTeamName"
                        android:text="@string/exhibition_visitor_teamname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                    <TextView
                        android:layout_alignParentStart="true"
                        android:text="@string/exhibition_batting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_alignParentEnd="true"
                        android:text="000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                    <TextView
                        android:layout_alignParentStart="true"
                        android:text="@string/exhibition_pitching"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_alignParentEnd="true"
                        android:text="000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                    <TextView
                        android:layout_alignParentStart="true"
                        android:text="@string/exhibition_fielding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_alignParentEnd="true"
                        android:text="000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="40dp"
            android:id="@+id/cvHome"
            android:layout_weight="1"
            android:layout_width="200dp"
            android:layout_height="200dp">

            <LinearLayout
                android:orientation="vertical"
                android:weightSum="5"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/exhibition_home"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:id="@+id/bgHomeTeamname"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:gravity = "center"
                        android:id="@+id/tvHomeTeamName"
                        android:text="@string/exhibition_home_teamname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                    <TextView
                        android:layout_alignParentStart="true"
                        android:text="@string/exhibition_batting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_alignParentEnd="true"
                        android:text="000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                    <TextView
                        android:layout_alignParentStart="true"
                        android:text="@string/exhibition_pitching"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_alignParentEnd="true"
                        android:text="000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                    <TextView
                        android:layout_alignParentStart="true"
                        android:text="@string/exhibition_fielding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_alignParentEnd="true"
                        android:text="000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


</RelativeLayout>