<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlRow">

    <android.support.v7.widget.CardView
        card_view:cardUseCompatPadding="true"
        android:id="@+id/cvTeam"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardElevation="2dp"
        card_view:cardCornerRadius="15dp">

        <LinearLayout
            android:weightSum="11"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_weight="4"
                android:id="@+id/tvTeamName"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="center"
                tools:text="TEAMNAME"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <LinearLayout
                android:background="@drawable/outline_left"
                android:orientation="horizontal"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:weightSum="3">

                <TextView
                    android:textSize="12sp"
                    android:gravity="center"
                    android:text="@string/exhibition_batting"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:background="@drawable/basic_outline"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:text="@string/exhibition_pitching"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:textSize="12sp"
                    android:gravity="center"
                    android:text="@string/exhibition_fielding"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/tvBattingRating"
                    android:textSize="16sp"
                    android:gravity="center"
                    tools:text="99"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:background="@drawable/basic_outline"
                    android:id="@+id/tvPitchingRating"
                    tools:text="99"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:text="@string/exhibition_pitching"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/tvFieldingRating"
                    tools:text="99"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:text="@string/exhibition_fielding"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
        </android.support.v7.widget.CardView>

</RelativeLayout>